--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,9 @@
 {
+    "name": "mdnscode/masterticketsync",
+    "description": "Sync parent/child tickets in GLPI",
+    "type": "glpi-plugin",
+    "license": "MIT",
     "require": {
         "php": ">=7.4"
-    },
-    "require-dev": {
-        "glpi-project/tools": "^0.5"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "platform": {
-            "php": "7.4.0"
-        },
-        "sort-packages": true
     }
 }
